src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Lead_HQ_Country__c</fullName>
        <description>Lead HQ Country (populated from funnel beam)</description>
        <label>Lead HQ Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei Darussalam</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_HQ_State__c</fullName>
        <description>Lead HQ State (populated by funnel beam).</description>
        <label>Lead HQ State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_HQ_Street__c</fullName>
        <description>Lead HQ street (populated from funnel beam)</description>
        <label>Lead HQ Street</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_HQ_Zip__c</fullName>
        <description>Lead HQ zip (populated by funnel beam)</description>
        <label>Lead HQ Zip</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Linkedin_Profile__c</fullName>
        <description>Linkedin Profile for the lead</description>
        <label>Lead Linkedin Profile</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Type__c</fullName>
        <label>Lead Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Change_Date__c</fullName>
        <businessOwnerUser>nadia.gainsbourg@neo4j.com.trnint</businessOwnerUser>
        <description>Admin time stamp field used for auditing purposes and in certain integrations, including RingLead to help accurately determine the winning record that will survive the merge. JIRA: SFDCSPT-163</description>
        <inlineHelpText>Admin time stamp field used for auditing purposes and in certain integrations, including RingLead to help accurately determine the winning record that will survive the merge.</inlineHelpText>
        <label>Lead Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Detail__c</fullName>
        <description>This field was created to provide a way to enter the reason codes specific to the &quot;Disqualified&quot; and &quot;Recycle&quot; values in &quot;Lead Status&quot; field.

JIRA: 
SFDCSPT-91; 7.27.2020
SFDCSPT-100; 8.6.2020</description>
        <inlineHelpText>&quot;Disqualified&quot; and &quot;Recycle&quot; reason codes mapped to the &quot;Lead Status&quot; field.</inlineHelpText>
        <label>Lead Status Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Authority</fullName>
                </value>
                <value>
                    <fullName>Bad Data</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Country (not serviced)</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Job Applicant/Solicitor</fullName>
                </value>
                <value>
                    <fullName>Left Company</fullName>
                </value>
                <value>
                    <fullName>No Approved Project</fullName>
                </value>
                <value>
                    <fullName>No budget</fullName>
                </value>
                <value>
                    <fullName>No Reason Provided - Marketo Default Disqualified</fullName>
                </value>
                <value>
                    <fullName>No Reason Provided - Marketo Default Recycle</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>PR/Press</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Status_Mirror__c</fullName>
        <formula>TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status Mirror</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__A2B_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A2B Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (A2B Account)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__A2B_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A2B Group</label>
        <referenceTo>LeanData__A2B_Group__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Has_Matched__c</fullName>
        <label>Has Matched</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__LD_Segment__c</fullName>
        <label>LD Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Marketing_Sys_Created_Date__c</fullName>
        <label>LeanData Marketing Sys Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Matched_Account_Annual_Revenue__c</fullName>
        <label>Matched Account Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Matched_Account_Billing_Country__c</fullName>
        <label>Matched Account Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Matched_Account_Billing_Postal_Code__c</fullName>
        <label>Matched Account Billing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Matched_Account_Billing_State__c</fullName>
        <label>Matched Account Billing State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Matched_Account_Custom_Field_1__c</fullName>
        <label>Matched Account Custom Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Matched_Account_Employees__c</fullName>
        <label>Matched Account Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Matched_Account_Industry__c</fullName>
        <label>Matched Account Industry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Matched_Account_Name__c</fullName>
        <label>Matched Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Matched_Account_Type__c</fullName>
        <label>Matched Account Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Matched_Account_Website__c</fullName>
        <label>Matched Account Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LeanData__Matched_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LeanData Matched Account (deprecated)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LeanData Matched Leads</relationshipLabel>
        <relationshipName>Matched_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Matched_Buyer_Persona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matched Buyer Persona</label>
        <referenceTo>LeanData__Buyer_Persona__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Matched_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LeanData Matched Lead (deprecated)</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>LeanData Matched Leads</relationshipLabel>
        <relationshipName>Matched_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Modified_Score__c</fullName>
        <label>Modified Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Matched_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Matched Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LeanData Matched Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Timestamp__c</fullName>
        <label>Reporting Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Router_Status__c</fullName>
        <label>LeanData Router Status (obsolete)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>not_processed</fullName>
                </value>
                <value>
                    <fullName>unmatched</fullName>
                </value>
                <value>
                    <fullName>converted</fullName>
                </value>
                <value>
                    <fullName>routed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Action__c</fullName>
        <label>Routing Action</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Status__c</fullName>
        <label>LeanData Routing Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Salesforce_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeanData Salesforce Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Search_Index__c</fullName>
        <description>LeanData search field</description>
        <label>LeanData Search</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeanData__Search__c</fullName>
        <description>LeanData search field</description>
        <label>LeanData Search (obsolete)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeanData__Status_Info__c</fullName>
        <label>State Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Tag__c</fullName>
        <label>Tag</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lean_Data_Processed__c</fullName>
        <description>Field to indicate if a lead has been passed through lean data routing</description>
        <label>Lean Data Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_Database_Count_Aggregate__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <description>Indicates the aggregate number of live databases (Free + Pro) across all AuraDB users who share the same company domain.This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo.
JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates the aggregate number of live databases (Free + Pro) across all AuraDB users who share the same company domain. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Live Database Count (Aggregate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_Database_Count__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <description>Indicates the number of live databases (Free + Pro) that an AuraDB user has had running within the past 24 hours. This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo.
JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates the number of live databases (Free + Pro) that an AuraDB user has had running within the past 24 hours. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Live Database Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_GB_Size_Aggregate__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <description>Indicates the aggregate size of live databases (Free + Pro) across all AuraDB users who share the same company domain.This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo.
Jira: SFDCSPT-594</description>
        <inlineHelpText>Indicates the aggregate size of live databases (Free + Pro) across all AuraDB users who share the same company domain. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Live GB Size (Aggregate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_GB_Size__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <description>Indicates the aggregate size of all live databases (Free + Pro) that an AuraDB user has had running within the past 24 hours. This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo.
JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates the aggregate size of all live databases (Free + Pro) that an AuraDB user has had running within the past 24 hours. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Live GB Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MQL_Count__c</fullName>
        <label>MQL Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MQL_Date__c</fullName>
        <label>MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQL_Original_Date__c</fullName>
        <label>MQL Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Qualified_Date__c</fullName>
        <label>Marketing Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matched_ABM_Account_Level__c</fullName>
        <description>Matched ABM Account Level</description>
        <label>Matched ABM Account Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_ABM_Account_Score__c</fullName>
        <description>Matched ABM account score</description>
        <label>Matched ABM Account Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matched_ABM_Target_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Matched ABM Target Account</description>
        <label>Matched ABM Target Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Matched_Account_Owner__c</fullName>
        <label>Matched Account Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Account_Revenue__c</fullName>
        <description>Matched revenue from the account</description>
        <label>Matched Account Revenue ($)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Account_Shipping_Country__c</fullName>
        <label>Matched Account Shipping Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Account_Shipping_State__c</fullName>
        <label>Matched Account Shipping State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meets_Enterprise_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A field to indicate if a lead meets the enterprise criteria set by marketing. This field is updated in Marketo</description>
        <label>Meets Enterprise Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meets_Mid_Market_Criteria__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>A lead who meets the Mid-Market Criteria</description>
        <inlineHelpText>A lead who meets the Mid-Market Criteria</inlineHelpText>
        <label>Meets Mid-Market Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Event_Questions__c</fullName>
        <label>Most Recent Event Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Active_Sequence__c</fullName>
        <description>Name of current active sequence in outreach</description>
        <label>Name of Active Sequence</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neo4j_Aura__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Neo4j Aura</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Neo4j_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Neo4j Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oktopost_Social_Last_Source__c</fullName>
        <businessOwnerGroup>Content_Marketing</businessOwnerGroup>
        <description>This field is part of Oktopost &lt;&gt; SFDC integration and is automatically updated by Oktopost. It contains the name of the social media platform where the Lead last interacted with Neo4j content. For example, if the Lead likes or comments on a Neo4j post on LinkedIn, the value displayed in the field will be ‘LinkedIn’. JIRA: SFDCSPT-608</description>
        <inlineHelpText>Contains the name of the social media platform where the Lead last interacted with Neo4j&apos;s content. For example, if the Lead likes or comments on a Neo4j post on LinkedIn, the value displayed in the field will be ‘LinkedIn’. The field is automatically populated by Oktopost.</inlineHelpText>
        <label>Social Last Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_In_Date__c</fullName>
        <label>Opt-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opt_In_Notes__c</fullName>
        <label>Opt-In Notes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Use_Case__c</fullName>
        <label>Other Use Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Campaign__c</fullName>
        <label>Outbound Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Matzen Shirley</fullName>
                </value>
                <value>
                    <fullName>Candace Shin</fullName>
                </value>
                <value>
                    <fullName>Hessan Haiderzada</fullName>
                </value>
                <value>
                    <fullName>Julio Bayona</fullName>
                </value>
                <value>
                    <fullName>Sherman Urrutia</fullName>
                </value>
                <value>
                    <fullName>Vanessa Moultson</fullName>
                </value>
                <value>
                    <fullName>Keoni Gaspar</fullName>
                </value>
                <value>
                    <fullName>Art Thainuruk</fullName>
                </value>
                <value>
                    <fullName>Sam Magnus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach_Status__c</fullName>
        <description>Temporary Status field until completed lead life cycle</description>
        <label>Outreach Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PQL_Status__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an AuraDB user&apos;s in-product behavior and demographic data qualify it for a sales conversation. Updated daily from Segment/Marketo.
JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates whether an AuraDB user&apos;s in-product behavior and demographic data qualify it for a sales conversation. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>PQL Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Partner Contact)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Marketing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>a7y3s0000004HyrAAE discussed with Rod,Logan,Julia</description>
        <inlineHelpText>Primary marketing contact dedicated to Neo4j</inlineHelpText>
        <label>Partner Marketing Contact (manual)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Ownership__c</fullName>
        <label>Partner Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Neo4j</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Partner)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pause_Lifecycle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pause Lifecycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>C Suite, Central IT, or Practitioner</description>
        <inlineHelpText>C Suite, Central IT, or Practitioner</inlineHelpText>
        <label>Persona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C Suite</fullName>
                </value>
                <value>
                    <fullName>Central IT</fullName>
                </value>
                <value>
                    <fullName>Practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pro_Tier_User_Status__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an Aura user has had at had least one live Pro AuraDB database running within the past 24 hours. This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo.
JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates whether an Aura user has had at had least one live Pro AuraDB database running within the past 24 hours. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Pro Tier User Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RCM_Stage__c</fullName>
        <label>RCM Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_Original_Date__c</fullName>
        <label>Raw Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recycle_Date__c</fullName>
        <label>Recycle Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recycle_Reason_History__c</fullName>
        <label>Recycle Reason History</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RegionalTerritoryLead__c</fullName>
        <description>Indicates what regional territory the Lead falls into based on the country and/or state. JIRA: SFDCSPT-306</description>
        <inlineHelpText>Indicates what regional territory the Lead falls into based on the country and/or state. Auto-populated.</inlineHelpText>
        <label>Regional Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Consider_Updates_After__c</fullName>
        <label>Consider Updates After</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Current_Endpoint__c</fullName>
        <label>Current Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Is_RingLead_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is RingLead Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__RingLead_App_Field__c</fullName>
        <label>RingLead App Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__RingLead_Last_Processed_Date__c</fullName>
        <label>Last Processed Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>